Capitalize sidebar links Fix main-container-height variable so entire viewport is covered Fix redirect after your create a new listing

--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -1,5 +1,5 @@
 $header-height: 8vh;
-$main-container-height: 88vh;
+$main-container-height: 92vh;
 $map-width: 60vw;
 $sidebar-width: 15rem;
 $default-box-shadow: -2px 2px 2px #aaaaaa;
